--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -39,7 +39,7 @@
     </table>
 
     <script>
-        fetch('explorer/FidoKeys.json')
+        fetch('Explorer/FidoKeys.json')
             .then(response => response.json())
             .then(data => {
                 const tableBody = document.getElementById('fidoTable').getElementsByTagName('tbody')[0];
