--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -19,10 +19,17 @@
         th {
             background-color: #f2f2f2;
         }
+        #searchInput {
+            margin-bottom: 10px;
+            padding: 8px;
+            width: 100%;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
     <h1>FIDO Key Explorer</h1>
+    <input type="text" id="searchInput" placeholder="Search for vendors..." onkeyup="filterTable()">
     <table id="fidoTable">
         <thead>
             <tr>
@@ -59,6 +66,23 @@
                 });
             })
             .catch(error => console.error('Error loading JSON data:', error));
+
+        function filterTable() {
+            const input = document.getElementById('searchInput');
+            const filter = input.value.toLowerCase();
+            const table = document.getElementById('fidoTable');
+            const rows = table.getElementsByTagName('tr');
+
+            for (let i = 1; i < rows.length; i++) {
+                const cells = rows[i].getElementsByTagName('td');
+                const vendor = cells[0].innerText.toLowerCase();
+                if (vendor.indexOf(filter) > -1) {
+                    rows[i].style.display = '';
+                } else {
+                    rows[i].style.display = 'none';
+                }
+            }
+        }
     </script>
 </body>
 </html>
