--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -46,26 +46,28 @@
     </table>
 
     <script>
-        fetch('FidoKeys.json')
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Network response was not ok ' + response.statusText);
-                }
-                return response.json();
-            })
-            .then(data => {
-                const tableBody = document.getElementById('fidoTable').getElementsByTagName('tbody')[0];
-                data.forEach(item => {
-                    const row = tableBody.insertRow();
-                    row.insertCell(0).innerText = item.Vendor;
-                    row.insertCell(1).innerText = item.Description;
-                    row.insertCell(2).innerText = item.Bio;
-                    row.insertCell(3).innerText = item.USB;
-                    row.insertCell(4).innerText = item.NFC;
-                    row.insertCell(5).innerText = item.BLE;
-                });
-            })
-            .catch(error => console.error('Error loading JSON data:', error));
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('FidoKeys.json')
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok ' + response.statusText);
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    const tableBody = document.getElementById('fidoTable').getElementsByTagName('tbody')[0];
+                    data.forEach(item => {
+                        const row = tableBody.insertRow();
+                        row.insertCell(0).innerText = item.Vendor;
+                        row.insertCell(1).innerText = item.Description;
+                        row.insertCell(2).innerText = item.Bio;
+                        row.insertCell(3).innerText = item.USB;
+                        row.insertCell(4).innerText = item.NFC;
+                        row.insertCell(5).innerText = item.BLE;
+                    });
+                })
+                .catch(error => console.error('Error loading JSON data:', error));
+        });
 
         function filterTable() {
             const input = document.getElementById('searchInput');
