--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIDO Key Explorer</title>
+    <title>Entra Compatible Attestation FIDO Key Finder</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>FIDO Key Explorer</h1>
+        <h1>Entra Compatible Attestation FIDO Key Finder</h1>
         <input type="text" id="searchVendor" class="filter-input" placeholder="Search for vendors..." onkeyup="filterTable()">
         <select id="filterBio" class="filter-input" onchange="filterTable()">
             <option value="">All Bio</option>
