--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entra Compatible Attestation FIDO Key Finder</title>
+    <title>FIDO Key Explorer</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Entra Compatible Attestation FIDO Key Finder</h1>
+        <h1>FIDO Key Explorer</h1>
         <input type="text" id="searchVendor" class="filter-input" placeholder="Search for vendors..." onkeyup="filterTable()">
         <select id="filterBio" class="filter-input" onchange="filterTable()">
             <option value="">All Bio</option>
@@ -84,6 +84,7 @@
                     <th>USB</th>
                     <th>NFC</th>
                     <th>BLE</th>
+                    <th>AAGUID</th>
                 </tr>
             </thead>
             <tbody>
@@ -110,6 +111,7 @@
                         row.insertCell(3).innerText = item.USB;
                         row.insertCell(4).innerText = item.NFC;
                         row.insertCell(5).innerText = item.BLE;
+                        row.insertCell(6).innerText = item.AAGUID;
                     });
                 })
                 .catch(error => console.error('Error loading JSON data:', error));
