Formatting of Title and Database

--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIDO Key Explorer</title>
+    <title>Entra Compatible Attestation FIDO Key Explorer</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -52,6 +52,7 @@
         .last-updated {
             text-align: center;
             margin-top: 10px;
+            margin-bottom: 20px; /* Added margin-bottom for spacing */
             font-size: 14px;
             color: #666;
         }
