--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>FIDO Key Explorer</h1>
+        <h1>Entra Compatible Attestation FIDO Key Explorer</h1>
         <div class="last-updated" id="lastUpdated"></div>
         <input type="text" id="searchVendor" class="filter-input" placeholder="Search for vendors..." onkeyup="filterTable()">
         <select id="filterBio" class="filter-input" onchange="filterTable()">
