--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -62,6 +62,7 @@
     <div class="container">
         <h1>Entra Compatible Attestation FIDO Key Explorer</h1>
         <div class="last-updated" id="lastUpdated"></div>
+        <div class="last-updated" id="lastChecked"></div>
         <input type="text" id="searchVendor" class="filter-input" placeholder="Search for vendors..." onkeyup="filterTable()">
         <select id="filterBio" class="filter-input" onchange="filterTable()">
             <option value="">All Bio</option>
@@ -126,9 +127,19 @@
                         row.insertCell(6).innerText = item.BLE;
                     });
 
+                    // Format dates
+                    const formatDate = (dateString) => {
+                        const options = { year: 'numeric', month: 'long', day: 'numeric' };
+                        return new Date(dateString).toLocaleDateString(undefined, options);
+                    };
+
                     // Display the last updated timestamp
                     const lastUpdatedElement = document.getElementById('lastUpdated');
-                    lastUpdatedElement.innerText = `Database Last Updated: ${data.metadata.databaseLastUpdated}`;
+                    lastUpdatedElement.innerText = `Database Last Updated: ${formatDate(data.metadata.databaseLastUpdated)}`;
+
+                    // Display the last checked timestamp
+                    const lastCheckedElement = document.getElementById('lastChecked');
+                    lastCheckedElement.innerText = `Database Last Checked: ${formatDate(data.metadata.databaseLastChecked)}`;
                 })
                 .catch(error => console.error('Error loading JSON data:', error));
         });
