--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -52,7 +52,14 @@
         .last-updated {
             text-align: center;
             margin-top: 10px;
-            margin-bottom: 20px; /* Added margin-bottom for spacing */
+            margin-bottom: 0; /* Removed bottom margin */
+            font-size: 14px;
+            color: #666;
+        }
+        .last-checked {
+            text-align: center;
+            margin-top: 5px; /* Minimal top margin */
+            margin-bottom: 20px; /* Added bottom margin for spacing */
             font-size: 14px;
             color: #666;
         }
@@ -62,7 +69,7 @@
     <div class="container">
         <h1>Entra Compatible Attestation FIDO Key Explorer</h1>
         <div class="last-updated" id="lastUpdated"></div>
-        <div class="last-updated" id="lastChecked"></div>
+        <div class="last-checked" id="lastChecked"></div>
         <input type="text" id="searchVendor" class="filter-input" placeholder="Search for vendors..." onkeyup="filterTable()">
         <select id="filterBio" class="filter-input" onchange="filterTable()">
             <option value="">All Bio</option>
