--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -49,27 +49,31 @@
         tr:hover {
             background-color: #ddd;
         }
-        .last-updated {
-            text-align: center;
+        .last-updated-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             margin-top: 10px;
-            margin-bottom: 0; /* Removed bottom margin */
+            margin-bottom: 20px;
             font-size: 14px;
             color: #666;
         }
-        .last-checked {
-            text-align: center;
-            margin-top: 5px; /* Minimal top margin */
-            margin-bottom: 20px; /* Added bottom margin for spacing */
-            font-size: 14px;
-            color: #666;
+        .last-updated-container div {
+            margin: 0 10px;
+        }
+        .divider {
+            margin: 0 10px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Entra Compatible Attestation FIDO Key Explorer</h1>
-        <div class="last-updated" id="lastUpdated"></div>
-        <div class="last-checked" id="lastChecked"></div>
+        <div class="last-updated-container">
+            <div id="lastUpdated"></div>
+            <div class="divider">|</div>
+            <div id="lastChecked"></div>
+        </div>
         <input type="text" id="searchVendor" class="filter-input" placeholder="Search for vendors..." onkeyup="filterTable()">
         <select id="filterBio" class="filter-input" onchange="filterTable()">
             <option value="">All Bio</option>
