--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -95,6 +95,7 @@
             <option value="Yes">Yes</option>
             <option value="No">No</option>
         </select>
+        <input type="text" id="filterVersion" class="filter-input" placeholder="Search for versions..." onkeyup="filterTable()">
         <table id="fidoTable">
             <thead>
                 <tr>
@@ -105,6 +106,7 @@
                     <th>USB</th>
                     <th>NFC</th>
                     <th>BLE</th>
+                    <th>Version</th>
                 </tr>
             </thead>
             <tbody>
@@ -136,6 +138,7 @@
                         row.insertCell(4).innerText = item.USB;
                         row.insertCell(5).innerText = item.NFC;
                         row.insertCell(6).innerText = item.BLE;
+                        row.insertCell(7).innerText = item.Version; // Add Version data
                     });
 
                     // Format dates
@@ -161,6 +164,7 @@
             const usbFilter = document.getElementById('filterUSB').value;
             const nfcFilter = document.getElementById('filterNFC').value;
             const bleFilter = document.getElementById('filterBLE').value;
+            const versionInput = document.getElementById('filterVersion').value.toLowerCase();
             const table = document.getElementById('fidoTable');
             const rows = table.getElementsByTagName('tr');
 
@@ -171,14 +175,16 @@
                 const usb = cells[4].innerText;
                 const nfc = cells[5].innerText;
                 const ble = cells[6].innerText;
+                const version = cells[7].innerText.toLowerCase(); // Get Version cell
 
                 const matchesVendor = vendor.includes(vendorInput);
                 const matchesBio = !bioFilter || bio === bioFilter;
                 const matchesUSB = !usbFilter || usb === usbFilter;
                 const matchesNFC = !nfcFilter || nfc === nfcFilter;
                 const matchesBLE = !bleFilter || ble === bleFilter;
+                const matchesVersion = version.includes(versionInput);
 
-                if (matchesVendor && matchesBio && matchesUSB && matchesNFC && matchesBLE) {
+                if (matchesVendor && matchesBio && matchesUSB && matchesNFC && matchesBLE && matchesVersion) {
                     rows[i].style.display = '';
                 } else {
                     rows[i].style.display = 'none';
