Update index.html Updated for new version values

--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -97,8 +97,10 @@
         </select>
         <select id="filterVersion" class="filter-input" onchange="filterTable()">
             <option value="">All Versions</option>
-            <option value="2.0">2.0</option>
-            <option value="2.1">2.1</option>
+            <option value="U2F V2">U2F V2</option>
+            <option value="FIDO 2.0">FIDO 2.0</option>
+            <option value="FIDO 2.1">FIDO 2.1</option>
+            <option value="FIDO 2.1 PRE">FIDO 2.1 PRE</option>
         </select>
         <table id="fidoTable">
             <thead>
