--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -48,6 +48,7 @@
         }
         tr:hover {
             background-color: #ddd;
+            cursor: pointer;
         }
         .last-updated-container {
             display: flex;
@@ -63,6 +64,39 @@
         }
         .divider {
             margin: 0 10px;
+        }
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+            padding-top: 60px;
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -120,6 +154,22 @@
         </table>
     </div>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Key Details</h2>
+            <p id="modalVendor"></p>
+            <p id="modalDescription"></p>
+            <p id="modalAAGUID"></p>
+            <p id="modalBio"></p>
+            <p id="modalUSB"></p>
+            <p id="modalNFC"></p>
+            <p id="modalBLE"></p>
+            <p id="modalVersion"></p>
+        </div>
+    </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             fetch('FidoKeys.json')
@@ -145,6 +195,7 @@
                         row.insertCell(5).innerText = item.NFC;
                         row.insertCell(6).innerText = item.BLE;
                         row.insertCell(7).innerText = item.Version; // Add Version data
+                        row.addEventListener('click', () => showDetails(item));
                     });
 
                     // Format dates
@@ -195,6 +246,36 @@
                 } else {
                     rows[i].style.display = 'none';
                 }
+            }
+        }
+
+        function showDetails(item) {
+            document.getElementById('modalVendor').innerText = 'Vendor: ' + item.Vendor;
+            document.getElementById('modalDescription').innerText = 'Description: ' + item.Description;
+            document.getElementById('modalAAGUID').innerText = 'AAGUID: ' + item.AAGUID;
+            document.getElementById('modalBio').innerText = 'Bio: ' + item.Bio;
+            document.getElementById('modalUSB').innerText = 'USB: ' + item.USB;
+            document.getElementById('modalNFC').innerText = 'NFC: ' + item.NFC;
+            document.getElementById('modalBLE').innerText = 'BLE: ' + item.BLE;
+            document.getElementById('modalVersion').innerText = 'Version: ' + item.Version;
+            document.getElementById('myModal').style.display = 'block';
+        }
+
+        // Get the modal
+        const modal = document.getElementById('myModal');
+
+        // Get the <span> element that closes the modal
+        const span = document.getElementsByClassName('close')[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+            modal.style.display = 'none';
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = 'none';
             }
         }
     </script>
