Update index.html Testing protocol family

--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -258,6 +258,7 @@
             document.getElementById('modalNFC').innerText = 'NFC: ' + item.NFC;
             document.getElementById('modalBLE').innerText = 'BLE: ' + item.BLE;
             document.getElementById('modalVersion').innerText = 'Version: ' + item.Version;
+            document.gotElementById('modalFamily').innerText = 'Famiy ' + item.metadataStatement.protocolFamily;
             document.getElementById('myModal').style.display = 'block';
         }
 
