Update index.html refactored to see if family works

--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -167,6 +167,7 @@
             <p id="modalNFC"></p>
             <p id="modalBLE"></p>
             <p id="modalVersion"></p>
+            <p id="modalFamily"></p>
         </div>
     </div>
 
