--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -167,6 +167,7 @@
             <p id="modalNFC"></p>
             <p id="modalBLE"></p>
             <p id="modalVersion"></p>
+            <p id="modalProtocolFamily"></p>
         </div>
     </div>
 
@@ -258,6 +259,7 @@
             document.getElementById('modalNFC').innerText = 'NFC: ' + item.NFC;
             document.getElementById('modalBLE').innerText = 'BLE: ' + item.BLE;
             document.getElementById('modalVersion').innerText = 'Version: ' + item.Version;
+            document.getElementById('modalProtocolFamily').innerText = 'Protocol Family: ' + item.metadataStatement.protocolFamily;
             document.getElementById('myModal').style.display = 'block';
         }
 
