Update index.html Updated title for versions

--- a/Explorer/index.html
+++ b/Explorer/index.html
@@ -168,6 +168,7 @@
             <p id="modalBLE"></p>
             <p id="modalVersion"></p>
             <p id="modalProtocolFamily"></p>
+            <p>FIDO Alliance Versions:</p>
             <ul id="modalVersions"></ul>
         </div>
     </div>
